k3s/minecraft/03-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft
  namespace: minecraft
  labels:
    app: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app: minecraft

    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: minecraft
          image: itzg/minecraft-server:latest

          ports:
            - containerPort: 25565
              name: mc

            - containerPort: 25575
              name: rcon

          securityContext:
            readOnlyRootFilesystem: false

          volumeMounts:
            - name: minecraft-data
              mountPath: /data

          resources:
            requests:
              cpu: 500m
              memory: 2Gi

            limits:
              cpu: "3"
              memory: 8Gi

          readinessProbe:
            tcpSocket:
              port: 25565

            initialDelaySeconds: 60
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: 25565

            initialDelaySeconds: 120
            periodSeconds: 30

      volumes:
        - name: minecraft-data
          persistentVolumeClaim:
            claimName: minecraft-pvc
