k3s/minecraft/04-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  namespace: minecraft

spec:
  selector:
    app: minecraft

  ports:
    - name: mc
      port: 25565
      targetPort: mc
      protocol: TCP

  type: ClusterIP
