k3s/minecraft/05-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crafty
  namespace: minecraft
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  ingressClassName: traefik

  rules:
    - host: crafty.kube.silvus.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crafty
                port:
                  name: craftys

  tls:
    - hosts:
        - crafty.kube.silvus.me
      secretName: crafty-tls
